Fixes input too wide issue

--- a/style.css
+++ b/style.css
@@ -163,13 +163,13 @@ p {
     }
 
     input {
-        width: 90%;
+        width: 88%;
         padding: 20px;
     }
 
     #app {
         display: block;
-        margin-top: 30px;
+        margin-top: 50px;
     }
 
 }
